cmake_minimum_required(VERSION 3.8)
project(AdventOfCode2017)

set(CMAKE_CXX_STANDARD 11)

add_executable(011 011.cpp)
add_executable(012 012.cpp)
add_executable(021 021.cpp)
add_executable(022 022.cpp)
add_executable(031 031.cpp)
add_executable(041 041.cpp)
add_executable(042 042.cpp)
add_executable(051 051.cpp)
add_executable(052 052.cpp)
add_executable(061 061.cpp)
add_executable(062 062.cpp)
add_executable(071 071.cpp)
add_executable(072 072.cpp)
add_executable(081 081.cpp)
add_executable(082 082.cpp)
add_executable(091 091.cpp)
add_executable(092 092.cpp)
add_executable(101 101.cpp)
add_executable(102 102.cpp)
add_executable(111 111.cpp)
add_executable(112 112.cpp)
add_executable(121 121.cpp)
add_executable(122 122.cpp)
add_executable(131 131.cpp)
add_executable(132 132.cpp)