cmake_minimum_required(VERSION 3.8)
project(AdventOfCode2017)

set(CMAKE_CXX_STANDARD 11)

add_executable(011 011.cpp)
add_executable(012 012.cpp)
add_executable(021 021.cpp)
add_executable(022 022.cpp)
add_executable(031 031.cpp)
add_executable(041 041.cpp)
add_executable(042 042.cpp)
add_executable(051 051.cpp)
add_executable(052 052.cpp)
add_executable(061 061.cpp)
add_executable(062 062.cpp)
add_executable(071 071.cpp)
add_executable(072 072.cpp)
add_executable(081 081.cpp)
add_executable(082 082.cpp)
add_executable(091 091.cpp)
add_executable(092 092.cpp)
add_executable(101 101.cpp)
add_executable(102 102.cpp)
add_executable(111 111.cpp)
add_executable(112 112.cpp)
add_executable(121 121.cpp)
add_executable(122 122.cpp)
add_executable(131 131.cpp)
add_executable(132 132.cpp)
add_executable(141 141.cpp)
add_executable(142 142.cpp)
add_executable(151 151.cpp)
add_executable(152 152.cpp)
add_executable(161 161.cpp)
add_executable(162 162.cpp)
add_executable(171 171.cpp)
add_executable(172 172.cpp)
add_executable(181 181.cpp)
add_executable(182 182.cpp)
add_executable(190 190.cpp)
add_executable(201 201.cpp)
add_executable(202 202.cpp)
add_executable(210 210.cpp)
add_executable(212 WIP-212.cpp)
add_executable(221 221.cpp)
add_executable(222 222.cpp)
add_executable(231 231.cpp)
add_executable(232 232.cpp)
add_executable(241 241.cpp)
add_executable(242 242.cpp)

add_executable(WIP232 WIP-232.cpp)